tests/negative/gold/export-local-test.gold
tests/negative/export-local-test.toit:5:8: error: Can't export local 'foo'
export foo
       ^~~
Compilation failed
